# ccds-project

./: LICENSE  Makefile  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  requirements.txt
data/processed/: dataset.csv
data/raw/: dataset.csv
docs/: mkdocs.yml  reflection.txt  todo.txt
docs/docs/: index.md
major_assignment_ccds/: __init__.py  dataset.py  dataset.py.save  features.py  plots.py
major_assignment_ccds/modeling/: predict.py  train.py
notebooks/: 0.01-rc-small_data_analysis_and_visualization.ipynb
