[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "major_assignment_ccds"
version = "0.0.1"
description = "This is a major assignment project which purpose is to provide training on cloud service storage access, data science project templating, and version controlling."
authors = [
  { name = "Roydan_Cruz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["major_assignment_ccds"]
include = ["pyproject.toml", "major_assignment_ccds/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["major_assignment_ccds"]
force-sort-within-sections = true

